Use main.scss, fix vh-bug in mobile Safari
Mobile Safari pushes the sticky footer out of the viewport if I use vh.

--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -1,7 +1,7 @@
 .layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
 }
 
 .layout__content {
